[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "endfield-futures"
version = "0.1.0"
description = "Endfield Futures web demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "loguru>=0.7.3",
    "uvicorn[standard]>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]
